--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple_weather_app_tmp",
+  "name": "simple_weather_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
